--- a/BiosensorSimulator/BiosensorSimulator.csproj
+++ b/BiosensorSimulator/BiosensorSimulator.csproj
@@ -11,6 +11,8 @@
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Solver.Foundation, Version=3.0.2.10889, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Solver.Foundation.3.1.0\lib\Microsoft.Solver.Foundation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,11 +47,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnaliticSimulation.cs" />
+    <Compile Include="Parameters\Biosensors\ZeroOrderSimulation.cs" />
+    <Compile Include="Parameters\Biosensors\FirstOrderSimulation.cs" />
+    <Compile Include="Parameters\Simulations\ISimulationParametersSuplier.cs" />
+    <Compile Include="Parameters\Biosensors\BiosensorParameters.cs" />
+    <Compile Include="Parameters\Biosensors\IBiosensorParametersSuplier.cs" />
+    <Compile Include="Parameters\Biosensors\BIK04.cs" />
+    <Compile Include="Matrix.cs" />
+    <Compile Include="Parameters\Simulations\Simulation1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchemeCalculator\ExplicitSchemeCalculator.cs" />
+    <Compile Include="SchemeCalculator\ISchemeCalculator.cs" />
+    <Compile Include="SchemeCalculator\ImplicitSchemeCalculator.cs" />
+    <Compile Include="ISimulation.cs" />
+    <Compile Include="Simulation1D.cs" />
+    <Compile Include="CurrentCalculator.cs" />
+    <Compile Include="Parameters\Simulations\SimulationParameters.cs" />
+    <Compile Include="ImplicitSchemeStabilityChecker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
