--- a/BiosensorSimulator/BiosensorSimulator.csproj
+++ b/BiosensorSimulator/BiosensorSimulator.csproj
@@ -47,7 +47,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="1D Simulations\SingleLayerSimulation1D.cs" />
     <Compile Include="AnaliticSimulation.cs" />
+    <Compile Include="Parameters\Biosensors\SimulationValidation.cs" />
     <Compile Include="Parameters\Biosensors\ZeroOrderSimulation.cs" />
     <Compile Include="Parameters\Biosensors\FirstOrderSimulation.cs" />
     <Compile Include="Parameters\Simulations\ISimulationParametersSuplier.cs" />
@@ -58,14 +60,14 @@
     <Compile Include="Parameters\Simulations\Simulation1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SchemeCalculator\ExplicitSchemeCalculator.cs" />
+    <Compile Include="SchemeCalculator\ExplicitSchemeCalculatorsdsasa.cs" />
     <Compile Include="SchemeCalculator\ISchemeCalculator.cs" />
     <Compile Include="SchemeCalculator\ImplicitSchemeCalculator.cs" />
     <Compile Include="ISimulation.cs" />
     <Compile Include="Simulation1D.cs" />
     <Compile Include="CurrentCalculator.cs" />
     <Compile Include="Parameters\Simulations\SimulationParameters.cs" />
-    <Compile Include="ImplicitSchemeStabilityChecker.cs" />
+    <Compile Include="SchemeCalculator\ImplicitSchemeStabilityChecker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
