--- a/BiosensorSimulator/BiosensorSimulator.csproj
+++ b/BiosensorSimulator/BiosensorSimulator.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Parameters\Biosensors\ZeroOrderSimulation.cs" />
     <Compile Include="Parameters\Biosensors\FirstOrderSimulation.cs" />
     <Compile Include="Parameters\Simulations\ISimulationParametersSuplier.cs" />
-    <Compile Include="Parameters\Biosensors\BiosensorParameters.cs" />
+    <Compile Include="Parameters\Biosensors\Biosensor.cs" />
     <Compile Include="Parameters\Biosensors\IBiosensorParametersSuplier.cs" />
     <Compile Include="Parameters\Biosensors\BIK04.cs" />
     <Compile Include="Calculators\MatrixCalculator.cs" />
