--- a/BiosensorSimulator/BiosensorSimulator.csproj
+++ b/BiosensorSimulator/BiosensorSimulator.csproj
@@ -48,14 +48,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Parameters\Biosensors\Biosensor.cs" />
+    <Compile Include="Parameters\Biosensors\TwoModelBiosensor.cs" />
     <Compile Include="Parameters\Scheme\ExplicitSchemeParameters.cs" />
     <Compile Include="Parameters\Scheme\ImplicitSchemeParameters.cs" />
+    <Compile Include="Results\ConsolePrinter.cs" />
+    <Compile Include="Results\FilePrinter.cs" />
+    <Compile Include="Results\IResultPrinter.cs" />
     <Compile Include="Simulations\Simulations1D\SingleLayerSimulation1D.cs" />
-    <Compile Include="Simulations\AnaliticSimulation.cs" />
+    <Compile Include="Simulations\AnalyticSimulation.cs" />
     <Compile Include="Parameters\Biosensors\SimulationValidation.cs" />
     <Compile Include="Parameters\Biosensors\ZeroOrderSimulation.cs" />
     <Compile Include="Parameters\Biosensors\FirstOrderSimulation.cs" />
-    <Compile Include="Parameters\Simulations\ISimulationParametersSuplier.cs" />
+    <Compile Include="Parameters\Simulations\ISimulationParametersSupplier.cs" />
     <Compile Include="Parameters\Biosensors\IBiosensorSupplier.cs" />
     <Compile Include="Parameters\Biosensors\BIK04.cs" />
     <Compile Include="Calculators\MatrixCalculator.cs" />
