--- a/BiosensorSimulator/BiosensorSimulator.csproj
+++ b/BiosensorSimulator/BiosensorSimulator.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Parameters\Biosensors\Biosensor.cs" />
+    <Compile Include="Parameters\Biosensors\PerforatedMembraneBiosensor.cs" />
     <Compile Include="Parameters\Biosensors\TwoModelBiosensor.cs" />
     <Compile Include="Parameters\Scheme\ExplicitSchemeParameters.cs" />
     <Compile Include="Parameters\Scheme\ImplicitSchemeParameters.cs" />
