--- a/BiosensorSimulator/BiosensorSimulator.csproj
+++ b/BiosensorSimulator/BiosensorSimulator.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calculators\SchemeCalculator\CrankNicolsonScheme.cs" />
     <Compile Include="Parameters\Biosensors\Biosensor.cs" />
     <Compile Include="Parameters\Biosensors\PerforatedMembraneBiosensor.cs" />
     <Compile Include="Parameters\Biosensors\TwoModelBiosensor.cs" />
