--- a/BiosensorSimulator/BiosensorSimulator.csproj
+++ b/BiosensorSimulator/BiosensorSimulator.csproj
@@ -61,8 +61,8 @@
     <Compile Include="Parameters\Biosensors\TwoLayerMicroreactorBiosensor.cs" />
     <Compile Include="Parameters\Biosensors\PerforatedMembraneBiosensor.cs" />
     <Compile Include="Parameters\Biosensors\TwoLayerBiosensor.cs" />
-    <Compile Include="Parameters\Scheme\ExplicitSchemeParameters.cs" />
-    <Compile Include="Parameters\Scheme\ImplicitSchemeParameters.cs" />
+    <Compile Include="Calculators\SchemeParameters\ExplicitSchemeParameters.cs" />
+    <Compile Include="Calculators\SchemeParameters\ImplicitSchemeParameters.cs" />
     <Compile Include="Results\ConsolePrinter.cs" />
     <Compile Include="Results\FilePrinter.cs" />
     <Compile Include="Results\IResultPrinter.cs" />
@@ -70,7 +70,6 @@
     <Compile Include="Simulations\AnalyticSimulation.cs" />
     <Compile Include="Parameters\Biosensors\ZeroOrderBiosensor.cs" />
     <Compile Include="Parameters\Biosensors\FirstOrderBiosensor.cs" />
-    <Compile Include="Parameters\Simulations\ISimulationParametersSupplier.cs" />
     <Compile Include="Calculators\MatrixCalculator.cs" />
     <Compile Include="Parameters\Simulations\SimulationParametersSuplier1.cs" />
     <Compile Include="Program.cs" />
