Separate BaseSimulation2D from BaseSimulation1D

--- a/BiosensorSimulator/BiosensorSimulator.csproj
+++ b/BiosensorSimulator/BiosensorSimulator.csproj
@@ -73,10 +73,10 @@
     <Compile Include="Results\ConsolePrinter.cs" />
     <Compile Include="Results\FilePrinter.cs" />
     <Compile Include="Results\IResultPrinter.cs" />
-    <Compile Include="Simulations\BaseSimulation1D.cs" />
-    <Compile Include="Simulations\BaseSimulation2D.cs" />
+    <Compile Include="Simulations\Simulations1D\BaseSimulation1D.cs" />
+    <Compile Include="Simulations\Simulations2D\BaseSimulation2D.cs" />
     <Compile Include="Simulations\Simulations1D\PerforatedMembrane1D.cs" />
-    <Compile Include="Simulations\Simulations1D\LayerSimulation2D.cs" />
+    <Compile Include="Simulations\Simulations2D\LayerSimulation2D.cs" />
     <Compile Include="Simulations\Simulations1D\SingleLayerSimulation1D.cs" />
     <Compile Include="Simulations\AnalyticSimulation.cs" />
     <Compile Include="Parameters\Biosensors\ZeroOrderBiosensor.cs" />
