--- a/BiosensorSimulator/BiosensorSimulator.csproj
+++ b/BiosensorSimulator/BiosensorSimulator.csproj
@@ -47,10 +47,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Calculators\SchemeCalculator\CrankNicolsonScheme.cs" />
-    <Compile Include="Calculators\SchemeCalculator\ExplicitSchemeCalculator2D.cs" />
-    <Compile Include="Calculators\SchemeCalculator\ExplicitSchemeStabilityChecker2D.cs" />
-    <Compile Include="Calculators\SchemeCalculator\ISchemeCalculator2d.cs" />
+    <Compile Include="Schemes\Calculators1D\CrankNicolsonScheme.cs" />
+    <Compile Include="Schemes\Calculators2D\ExplicitSchemeCalculator2D.cs" />
+    <Compile Include="Schemes\Calculators2D\ExplicitSchemeStabilityChecker2D.cs" />
+    <Compile Include="Schemes\Calculators2D\ISchemeCalculator2d.cs" />
     <Compile Include="Parameters\Biosensors\Base\BaseBiosensor.cs" />
     <Compile Include="Parameters\Biosensors\Base\BaseHomogenousBiosensor.cs" />
     <Compile Include="Parameters\Biosensors\Base\BasePerforatedMembraneBiosensor.cs" />
@@ -65,8 +65,8 @@
     <Compile Include="Parameters\Biosensors\TwoLayerMicroreactorBiosensor.cs" />
     <Compile Include="Parameters\Biosensors\PerforatedMembraneBiosensor.cs" />
     <Compile Include="Parameters\Biosensors\AnalyticalBiosensors\TwoLayerAnalyticalBiosensor.cs" />
-    <Compile Include="Calculators\SchemeParameters\ExplicitSchemeParameters.cs" />
-    <Compile Include="Calculators\SchemeParameters\ImplicitSchemeParameters.cs" />
+    <Compile Include="Schemes\Parameters\ExplicitSchemeParameters.cs" />
+    <Compile Include="Schemes\Parameters\ImplicitSchemeParameters.cs" />
     <Compile Include="Parameters\Biosensors\TwoLayerPerforatedMembraneBiosensor2D.cs" />
     <Compile Include="Parameters\Biosensors\TwoLayerPerforatedMembraneBiosensor.cs" />
     <Compile Include="Parameters\Simulations\SimulationParametersSuplier2.cs" />
@@ -80,16 +80,16 @@
     <Compile Include="Simulations\Simulations1D\SingleLayerSimulation1D.cs" />
     <Compile Include="Simulations\AnalyticSimulation.cs" />
     <Compile Include="Parameters\Biosensors\AnalyticalBiosensors\SingleLayerAnalyticalBiosensor.cs" />
-    <Compile Include="Calculators\MatrixCalculator.cs" />
+    <Compile Include="Schemes\MatrixCalculator.cs" />
     <Compile Include="Parameters\Simulations\SimulationParametersSuplier1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Calculators\SchemeCalculator\ImplicitSchemeCalculator.cs" />
-    <Compile Include="Calculators\SchemeCalculator\ISchemeCalculator.cs" />
-    <Compile Include="Calculators\SchemeCalculator\ExplicitSchemeCalculator.cs" />
+    <Compile Include="Schemes\Calculators1D\ImplicitSchemeCalculator.cs" />
+    <Compile Include="Schemes\Calculators1D\ISchemeCalculator.cs" />
+    <Compile Include="Schemes\Calculators1D\ExplicitSchemeCalculator.cs" />
     <Compile Include="Simulations\BaseSimulation.cs" />
     <Compile Include="Parameters\Simulations\SimulationParameters.cs" />
-    <Compile Include="Calculators\SchemeCalculator\ExplicitSchemeStabilityChecker.cs" />
+    <Compile Include="Schemes\Calculators1D\ExplicitSchemeStabilityChecker.cs" />
     <Compile Include="Simulations\Simulations1D\CylindricMicroreactors1D.cs" />
   </ItemGroup>
   <ItemGroup>
