--- a/BiosensorSimulator/BiosensorSimulator.csproj
+++ b/BiosensorSimulator/BiosensorSimulator.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Simulations\Simulations1D\BaseSimulation1D.cs" />
     <Compile Include="Simulations\Simulations2D\BaseSimulation2D.cs" />
     <Compile Include="Simulations\Simulations1D\PerforatedMembrane1D.cs" />
+    <Compile Include="Simulations\Simulations2D\PerforatedMembrane2D.cs" />
     <Compile Include="Simulations\Simulations2D\LayerSimulation2D.cs" />
     <Compile Include="Simulations\Simulations1D\SingleLayerSimulation1D.cs" />
     <Compile Include="Simulations\AnalyticSimulation.cs" />
