--- a/BiosensorSimulator/BiosensorSimulator.csproj
+++ b/BiosensorSimulator/BiosensorSimulator.csproj
@@ -76,8 +76,8 @@
     <Compile Include="Simulations\Simulations2D\BaseSimulation2D.cs" />
     <Compile Include="Simulations\Simulations1D\PerforatedMembrane1D.cs" />
     <Compile Include="Simulations\Simulations2D\PerforatedMembrane2D.cs" />
-    <Compile Include="Simulations\Simulations2D\LayerSimulation2D.cs" />
-    <Compile Include="Simulations\Simulations1D\Simulation1D.cs" />
+    <Compile Include="Simulations\Simulations2D\SimpleSimulation2D.cs" />
+    <Compile Include="Simulations\Simulations1D\SimpleSimulation1D.cs" />
     <Compile Include="Simulations\AnalyticSimulation.cs" />
     <Compile Include="Parameters\Biosensors\AnalyticalBiosensors\SingleLayerAnalyticalBiosensor.cs" />
     <Compile Include="Schemes\MatrixCalculator.cs" />
